<resources>
    <string name="app_name">etrapp</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for events</string>
    <string name="title_login">Sign in</string>
    <string name="email_or_user">email or username</string>
    <string name="password">password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="success_sign_in">You\'re now signed in.</string>
    <string name="edit">edit</string>
    <string name="create_event">Create event</string>
    <string name="signup_no_account">No account? Sign up now!</string>
    <string name="sign_up">Sign up</string>
    <string name="add">Add event</string>
    <string name="write_a_message">Write a message…</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="my_events">My events</string>
    <string name="user_events">%s events</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="event_start_date">Start date</string>
    <string name="event_image">Image URL</string>
    <string name="username">Username</string>
    <string name="new_password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="email">Email</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="register">Register</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_out_successful">Has cerrado sesión</string>
    <string name="filters">Filters</string>
    <string name="event_start_time">Start time</string>
    <string name="save_changes">Save changes</string>
    <string name="event_location">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="dialog_error_connection">Error establishing a etrapp server connection.You\'re in offline mode.</string>
    <string name="remove_filter">Remove filter</string>
    <string name="filter">Filtro por categoria:</string>
</resources>
