<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/new_user_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_user_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_user_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register" />



</LinearLayout>