<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/create_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/create_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_event_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_start_date"
        android:inputType="datetime"
        android:maxLines="1" />

    <EditText
        android:id="@+id/create_event_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_image"
        android:inputType="text"
        android:maxLines="1" />

</LinearLayout>