<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_etrapp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_username_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_or_user">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_text" />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signup_no_account"
            android:textAlignment="center"
            android:textColor="@color/material_blue300" />

    </LinearLayout>

</RelativeLayout>